tests/golden/errors/rename_replaces_spelling.kso
import { slice:cut } "std/text"

print "{slice "kanso" 1 2}"
