tests/golden/errors/rename_replaces_spelling.stderr
error[name]: unknown name `slice`
  --> rename_replaces_spelling.kso:3:9
   3 | print "{slice "kanso" 1 2}"
               ^
